// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTradeQuotePolling() When wallet is NOT connected Then the "receiver" field in the quote request should be undefined 1`] = `
[
  {
    "amount": "10000000",
    "buyToken": "0x0625aFB445C3B6B7B929342a04A22599fd5dBB59",
    "buyTokenDecimals": 18,
    "kind": "sell",
    "receiver": undefined,
    "sellToken": "0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14",
    "sellTokenDecimals": 18,
    "validFor": 1800,
  },
  {
    "appData": undefined,
    "quoteRequest": {
      "priceQuality": "optimal",
    },
  },
]
`;

exports[`useTradeQuotePolling() When wallet is connected Then should put account address into "receiver" field in the quote request 1`] = `
[
  {
    "amount": "10000000",
    "buyToken": "0x0625aFB445C3B6B7B929342a04A22599fd5dBB59",
    "buyTokenDecimals": 18,
    "kind": "sell",
    "receiver": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "sellToken": "0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14",
    "sellTokenDecimals": 18,
    "validFor": 1800,
  },
  {
    "appData": undefined,
    "quoteRequest": {
      "priceQuality": "optimal",
    },
  },
]
`;
